Ente properties
