# carisa-api/internal/relation/domain.go
@@ -26,7 +26,7 @@ type InstSpace struct {
 }
 
 func (l *InstSpace) ToString() string {
-	return strings.Concat("instSpaceLink: ID:", l.Key(), ", Name:", l.Name)
+	return strings.Concat("inst-space-link: ID:", l.Key(), ", Name:", l.Name)
 }
 
 func (l *InstSpace) Key() string {
@@ -41,9 +41,24 @@ type SpaceEnte struct {
 }
 
 func (s *SpaceEnte) ToString() string {
-	return strings.Concat("spaceEnteLink: ID:", s.Key(), ", Name:", s.Name)
+	return strings.Concat("space-ente-link: ID:", s.Key(), ", Name:", s.Name)
 }
 
 func (s *SpaceEnte) Key() string {
+	return s.ID
+}
+
+// Link represents the link between ente and properties
+type EnteEnteProp struct {
+	ID         string `json:"-"`
+	Name       string `json:"name"`
+	EntePropID string `json:"entePropId"`
+}
+
+func (s *EnteEnteProp) ToString() string {
+	return strings.Concat("ente-enteprop-link: ID:", s.Key(), ", Name:", s.Name)
+}
+
+func (s *EnteEnteProp) Key() string {
 	return s.ID
 }
